[gd_scene load_steps=6 format=3 uid="uid://dtd6sg2crg1n8"]

[ext_resource type="Script" path="res://entities/Checkpoint/CheckPoint.gd" id="1_y5jyj"]
[ext_resource type="Texture2D" uid="uid://8eqy44rx5dpd" path="res://entities/Checkpoint/StarPoleBase.png" id="2_4pcfd"]
[ext_resource type="Texture2D" uid="uid://b4y6jdmxw134t" path="res://entities/Checkpoint/StarPoleSpinner.png" id="3_gru4x"]
[ext_resource type="AudioStream" uid="uid://c0kasxwca1i4r" path="res://sounds/Genesis 32X SCD - Sonic the Hedgehog - Sound Effects/Sonic 1/S1_A1.wav" id="4_qrqlc"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_jelig"]

[node name="CheckPoint" type="Area3D" groups=["CheckPoint"]]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_y5jyj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_jelig")

[node name="SpriteBase" type="Sprite3D" parent="."]
offset = Vector2(0, 24)
pixel_size = 0.04
billboard = 2
texture_filter = 0
texture = ExtResource("2_4pcfd")

[node name="Pivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.81241, 0)

[node name="SpriteSpinner" type="Sprite3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.386, 0)
pixel_size = 0.04
billboard = 1
texture_filter = 0
texture = ExtResource("3_gru4x")

[node name="SndCheckPointTrigger" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_qrqlc")
bus = &"SoundEffects"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
